Kaggle Notebook | Stock Price Prediction | Version 2

--- a/stock-price-prediction.ipynb
+++ b/stock-price-prediction.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1aa4c179",
+   "id": "8d523d1b",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-02-12T13:28:22.083508Z",
-     "iopub.status.busy": "2024-02-12T13:28:22.082683Z",
-     "iopub.status.idle": "2024-02-12T13:28:25.832919Z",
-     "shell.execute_reply": "2024-02-12T13:28:25.831292Z"
+     "iopub.execute_input": "2024-02-12T13:29:58.559371Z",
+     "iopub.status.busy": "2024-02-12T13:29:58.558514Z",
+     "iopub.status.idle": "2024-02-12T13:30:01.814974Z",
+     "shell.execute_reply": "2024-02-12T13:30:01.813775Z"
     },
     "papermill": {
-     "duration": 3.759252,
-     "end_time": "2024-02-12T13:28:25.836345",
+     "duration": 3.263116,
+     "end_time": "2024-02-12T13:30:01.817577",
      "exception": false,
-     "start_time": "2024-02-12T13:28:22.077093",
+     "start_time": "2024-02-12T13:29:58.554461",
      "status": "completed"
     },
     "tags": []
@@ -43,20 +43,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10c67f61",
+   "execution_count": 2,
+   "id": "71388c03",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-12T13:30:01.823512Z",
+     "iopub.status.busy": "2024-02-12T13:30:01.822381Z",
+     "iopub.status.idle": "2024-02-12T13:30:01.867068Z",
+     "shell.execute_reply": "2024-02-12T13:30:01.865889Z"
+    },
     "papermill": {
-     "duration": 0.001946,
-     "end_time": "2024-02-12T13:28:25.841195",
+     "duration": 0.050037,
+     "end_time": "2024-02-12T13:30:01.869600",
      "exception": false,
-     "start_time": "2024-02-12T13:28:25.839249",
+     "start_time": "2024-02-12T13:30:01.819563",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-06-29</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>17.540001</td>\n",
+       "      <td>23.889999</td>\n",
+       "      <td>23.889999</td>\n",
+       "      <td>18766300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-06-30</td>\n",
+       "      <td>25.790001</td>\n",
+       "      <td>30.42</td>\n",
+       "      <td>23.299999</td>\n",
+       "      <td>23.830000</td>\n",
+       "      <td>23.830000</td>\n",
+       "      <td>17187100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-07-01</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.92</td>\n",
+       "      <td>20.270000</td>\n",
+       "      <td>21.959999</td>\n",
+       "      <td>21.959999</td>\n",
+       "      <td>8218800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010-07-02</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.10</td>\n",
+       "      <td>18.709999</td>\n",
+       "      <td>19.200001</td>\n",
+       "      <td>19.200001</td>\n",
+       "      <td>5139800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-07-06</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>15.830000</td>\n",
+       "      <td>16.110001</td>\n",
+       "      <td>16.110001</td>\n",
+       "      <td>6866900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date       Open   High        Low      Close  Adj Close    Volume\n",
+       "0  2010-06-29  19.000000  25.00  17.540001  23.889999  23.889999  18766300\n",
+       "1  2010-06-30  25.790001  30.42  23.299999  23.830000  23.830000  17187100\n",
+       "2  2010-07-01  25.000000  25.92  20.270000  21.959999  21.959999   8218800\n",
+       "3  2010-07-02  23.000000  23.10  18.709999  19.200001  19.200001   5139800\n",
+       "4  2010-07-06  20.000000  20.00  15.830000  16.110001  16.110001   6866900"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#importing dataset\n",
+    "df = pd.read_csv('/kaggle/input/tesla-stock-data-from-2010-to-2020/TSLA.csv')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
@@ -94,14 +203,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.099761,
-   "end_time": "2024-02-12T13:28:26.668107",
+   "duration": 6.812638,
+   "end_time": "2024-02-12T13:30:02.493516",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-02-12T13:28:18.568346",
+   "start_time": "2024-02-12T13:29:55.680878",
    "version": "2.5.0"
   }
  },
