Kaggle Notebook | Stock Price Prediction | Version 3

--- a/stock-price-prediction.ipynb
+++ b/stock-price-prediction.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d523d1b",
+   "id": "5be11080",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-02-12T13:29:58.559371Z",
-     "iopub.status.busy": "2024-02-12T13:29:58.558514Z",
-     "iopub.status.idle": "2024-02-12T13:30:01.814974Z",
-     "shell.execute_reply": "2024-02-12T13:30:01.813775Z"
+     "iopub.execute_input": "2024-02-12T13:31:11.299163Z",
+     "iopub.status.busy": "2024-02-12T13:31:11.298492Z",
+     "iopub.status.idle": "2024-02-12T13:31:15.173766Z",
+     "shell.execute_reply": "2024-02-12T13:31:15.172234Z"
     },
     "papermill": {
-     "duration": 3.263116,
-     "end_time": "2024-02-12T13:30:01.817577",
+     "duration": 3.88491,
+     "end_time": "2024-02-12T13:31:15.177039",
      "exception": false,
-     "start_time": "2024-02-12T13:29:58.554461",
+     "start_time": "2024-02-12T13:31:11.292129",
      "status": "completed"
     },
     "tags": []
@@ -44,19 +44,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71388c03",
+   "id": "7281b3d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-12T13:30:01.823512Z",
-     "iopub.status.busy": "2024-02-12T13:30:01.822381Z",
-     "iopub.status.idle": "2024-02-12T13:30:01.867068Z",
-     "shell.execute_reply": "2024-02-12T13:30:01.865889Z"
+     "iopub.execute_input": "2024-02-12T13:31:15.189075Z",
+     "iopub.status.busy": "2024-02-12T13:31:15.188499Z",
+     "iopub.status.idle": "2024-02-12T13:31:15.243062Z",
+     "shell.execute_reply": "2024-02-12T13:31:15.242117Z"
     },
     "papermill": {
-     "duration": 0.050037,
-     "end_time": "2024-02-12T13:30:01.869600",
+     "duration": 0.062335,
+     "end_time": "2024-02-12T13:31:15.245480",
      "exception": false,
-     "start_time": "2024-02-12T13:30:01.819563",
+     "start_time": "2024-02-12T13:31:15.183145",
      "status": "completed"
     },
     "tags": []
@@ -166,6 +166,200 @@
     "df = pd.read_csv('/kaggle/input/tesla-stock-data-from-2010-to-2020/TSLA.csv')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3b697b15",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-12T13:31:15.253836Z",
+     "iopub.status.busy": "2024-02-12T13:31:15.253174Z",
+     "iopub.status.idle": "2024-02-12T13:31:15.261519Z",
+     "shell.execute_reply": "2024-02-12T13:31:15.260196Z"
+    },
+    "papermill": {
+     "duration": 0.015778,
+     "end_time": "2024-02-12T13:31:15.264429",
+     "exception": false,
+     "start_time": "2024-02-12T13:31:15.248651",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2416, 7)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "076b188d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-12T13:31:15.273778Z",
+     "iopub.status.busy": "2024-02-12T13:31:15.273369Z",
+     "iopub.status.idle": "2024-02-12T13:31:15.321707Z",
+     "shell.execute_reply": "2024-02-12T13:31:15.320299Z"
+    },
+    "papermill": {
+     "duration": 0.057269,
+     "end_time": "2024-02-12T13:31:15.325021",
+     "exception": false,
+     "start_time": "2024-02-12T13:31:15.267752",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2416.000000</td>\n",
+       "      <td>2416.000000</td>\n",
+       "      <td>2416.000000</td>\n",
+       "      <td>2416.000000</td>\n",
+       "      <td>2416.000000</td>\n",
+       "      <td>2.416000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>186.271147</td>\n",
+       "      <td>189.578224</td>\n",
+       "      <td>182.916639</td>\n",
+       "      <td>186.403651</td>\n",
+       "      <td>186.403651</td>\n",
+       "      <td>5.572722e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>118.740163</td>\n",
+       "      <td>120.892329</td>\n",
+       "      <td>116.857591</td>\n",
+       "      <td>119.136020</td>\n",
+       "      <td>119.136020</td>\n",
+       "      <td>4.987809e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>16.139999</td>\n",
+       "      <td>16.629999</td>\n",
+       "      <td>14.980000</td>\n",
+       "      <td>15.800000</td>\n",
+       "      <td>15.800000</td>\n",
+       "      <td>1.185000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>34.342498</td>\n",
+       "      <td>34.897501</td>\n",
+       "      <td>33.587501</td>\n",
+       "      <td>34.400002</td>\n",
+       "      <td>34.400002</td>\n",
+       "      <td>1.899275e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>213.035004</td>\n",
+       "      <td>216.745002</td>\n",
+       "      <td>208.870002</td>\n",
+       "      <td>212.960007</td>\n",
+       "      <td>212.960007</td>\n",
+       "      <td>4.578400e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>266.450012</td>\n",
+       "      <td>270.927513</td>\n",
+       "      <td>262.102501</td>\n",
+       "      <td>266.774994</td>\n",
+       "      <td>266.774994</td>\n",
+       "      <td>7.361150e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>673.690002</td>\n",
+       "      <td>786.140015</td>\n",
+       "      <td>673.520020</td>\n",
+       "      <td>780.000000</td>\n",
+       "      <td>780.000000</td>\n",
+       "      <td>4.706500e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open         High          Low        Close    Adj Close  \\\n",
+       "count  2416.000000  2416.000000  2416.000000  2416.000000  2416.000000   \n",
+       "mean    186.271147   189.578224   182.916639   186.403651   186.403651   \n",
+       "std     118.740163   120.892329   116.857591   119.136020   119.136020   \n",
+       "min      16.139999    16.629999    14.980000    15.800000    15.800000   \n",
+       "25%      34.342498    34.897501    33.587501    34.400002    34.400002   \n",
+       "50%     213.035004   216.745002   208.870002   212.960007   212.960007   \n",
+       "75%     266.450012   270.927513   262.102501   266.774994   266.774994   \n",
+       "max     673.690002   786.140015   673.520020   780.000000   780.000000   \n",
+       "\n",
+       "             Volume  \n",
+       "count  2.416000e+03  \n",
+       "mean   5.572722e+06  \n",
+       "std    4.987809e+06  \n",
+       "min    1.185000e+05  \n",
+       "25%    1.899275e+06  \n",
+       "50%    4.578400e+06  \n",
+       "75%    7.361150e+06  \n",
+       "max    4.706500e+07  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
@@ -203,14 +397,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.812638,
-   "end_time": "2024-02-12T13:30:02.493516",
+   "duration": 8.369271,
+   "end_time": "2024-02-12T13:31:16.051888",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-02-12T13:29:55.680878",
+   "start_time": "2024-02-12T13:31:07.682617",
    "version": "2.5.0"
   }
  },
